# huaweicloudai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.swr  IMPLEMENTATION_PLAN.md  RAG_DISK_PERFORMANCE_TEST.md  RAG_TEST_RESULTS.md  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  get_projects.js  huawei_signer.js  next.config.ts  package-lock.json  package.json  project.tar.gz.1  tsconfig.json
.github/workflows/: push-swr-images.yml
app/: globals.css  layout.tsx  page.tsx  theme-provider.tsx
app/admin/: page.tsx
app/auth/: auth-form.tsx
app/license/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
chrome-extension/: background.js  content.js  manifest.json  styles.css
launcher/: CMakeLists.txt
launcher/src/: main.cpp
lib/: admin-auth.ts  admin-db.ts  app-config.ts  license-guard.ts  license-token.ts  license.ts  user-auth.ts
license-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json
license-server/src/: server.mjs
monolith/: CMakeLists.txt
monolith/src/: main.cpp
public/: manifest.json  offline.html  sw.js
rag-cpp-server/: CMakeLists.txt
rag-cpp-server/src/: main.cpp
rag_cache/: failed_pages.json  progress.json  service-catalog.json
scraper/: .gitignore  RAG_REPORT.md  RAG_SUMMARY.md  RELEVANCE_IMPROVEMENTS.md  package.json  start_chroma_server.py  tsconfig.json
scraper/scripts/: evaluate_hybrid.py  fast_ingest.py  fast_rag_ingest.py  (+8 more)
scripts/: build-doc-index.js  build-rag.ts  build-release.sh  build_doc_index.py  build_doc_index_streaming.py  build_index_batched.py  compose-up.sh  create_binary_index.py  create_index_streaming.py  package.json  precompute-rag.mjs  test-e2e.sh  test-launcher.sh  test-rag-disk-performance.mjs  test-rag-relevance.sh  ts-server-entry-core.ts  ts-server-entry-licensed.ts  ts-server-entry-unlicensed.ts  ts-server-entry.ts
types/: bun-sqlite.d.ts  third-party.d.ts
(+50 files in other folders)
